# Gym

./: .gitignore  .pre-commit-config.yaml  ATTRIBUTIONS.md  CLAUDE.md  CONTRIBUTING.md  README.md  codecov.yml  makefile  pyproject.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug.md  feature.md  task.md
.github/workflows/: _build_container.yml  build-docs.yml  build-test-publish-wheel.yml  cherry-pick-release-commit.yml  cicd-main.yml  close-inactive-issue-pr.yml  code-linting.yml  copyright-check.yml  fern-docs-ci.yml  fern-docs-preview-build.yml  fern-docs-preview-comment.yml  publish-fern-docs.yml  release-freeze.yml  release.yaml  secrets-detector.yml  unit-tests.yml
benchmarks/: __init__.py
benchmarks/aime24/: config.yaml  prepare.py
benchmarks/aime24-x/: README.md  config.yaml  prepare.py
benchmarks/aime25/: README.md  config.yaml  prepare.py
benchmarks/aime25-x/: README.md  aime25_x_utils.py  config.yaml  prepare.py
benchmarks/aime26/: README.md  config.yaml  prepare.py
benchmarks/browsecomp/: README.md  config.yaml  prepare.py
benchmarks/gpqa/: README.md  config.yaml  prepare.py
benchmarks/gpqa-x/: README.md  config.yaml  gpqa_x_utils.py  prepare.py
benchmarks/imo_answerbench/: README.md  config.yaml  prepare.py
benchmarks/librispeech_pc/: prepare.py
benchmarks/livecodebench/: README.md  config.yaml  prepare.py
benchmarks/minif2f/: README.md  config.yaml  prepare.py
benchmarks/mrcr/: README.md  config.yaml  prepare.py
benchmarks/nemotron_3_ultra/: benchmarks_short.yaml
benchmarks/omniscience/: README.md  config.yaml  judge_gptoss20b.yaml  prepare.py
benchmarks/prompts/: generic_default.yaml  lean4_formal_proof_deepseek_prover_v2.yaml
benchmarks/proof_bench_judge/: README.md  config.yaml  prepare.py
benchmarks/putnam_bench/: README.md  config.yaml  prepare.py
docker/: Dockerfile.ci
docs/: autodoc2_docstrings_parser.py  conf.py  config-file-anatomy.md  how-to-faq.md  index.md  project.json  versions1.json
docs/about/: ecosystem.md  features.md  index.md
docs/agent-server/: index.md
docs/contribute/: development-setup.md  index.md
docs/data/: download-huggingface.md  index.md  prepare-validate.md
docs/environment-tutorials/: adding-a-benchmark.md  creating-training-environment.md  designing-customer-evaluation.md  index.md  integrate-external-environments.md  multi-environment-training.md  multi-step-environment.md  real-world-data-generation.md  real-world-environment.md  real-world-implementation.md  single-step-environment.md  stateful-environment.md
docs/get-started/: detailed-setup.md  index.md  rollout-collection.md  setup-installation.md
docs/infrastructure/: deployment-topology.md  index.md  swe-rl-case-study.md
docs/model-recipes/: index.md  nemotron-3-nano.md  nemotron-3-super.md
docs/model-server/: index.md  vllm.md
docs/reference/: cli-commands.md  configuration.md  faq.md  index.md  rl-framework-compatibility.md
docs/references/: index.md
docs/resources-server/: index.md
docs/training/: index.md
docs/training-tutorials/: index.md  offline-training-w-rollouts.md  trl.md  unsloth.md
docs/troubleshooting/: configuration.md  index.md
docs/tutorials/: 00-terminology.md  01-concepts.md  02-setup.md  03-your-first-agent.md  04-verifying-results.md  05-rollout-collection.md  07-sft-dpo-rollout-collection.md  09-configuration-guide.md  README.md  creating-resource-server.md  custom-dataset-preparation.md  index.md  offline-training-w-rollouts.md  rl-training-with-nemo-rl.md  verifiers-environments.md
fern/: .gitignore  docs.yml  fern.config.json  main.css  package-lock.json  package.json
fern/components/: CTAButtons.tsx  Include.tsx  NavButton.tsx  NotebookViewer.tsx
fern/versions/: _nav_order.yml  latest.yml  v0.2.yml
nemo_gym/: __init__.py  base_resources_server.py  base_responses_api_agent.py  base_responses_api_model.py  benchmark_cli.py  benchmarks.py  cli.py  cli_setup_command.py  comparison_strategies.py  config_types.py  dataset_orchestrator.py  dataset_viewer.py  gitlab_utils.py  global_config.py  hf_utils.py  openai_utils.py  package_info.py  profiling.py  prompt.py  ray_utils.py  reward_profile.py  rollout_collection.py  server_commands.py  server_status.py  server_utils.py  train_data_utils.py
nemo_gym/metrics/: __init__.py  base.py  reward_metrics.py
penguin/: __init__.py
prompt_configs/: math.yaml  math_aime.yaml
resources/: resources_server_template.py  resources_server_test_template.py
resources_servers/arc_agi/: README.md  app.py  create_dataset.py  requirements.txt
resources_servers/atropos/: README.md  app.py
resources_servers/aviary/: README.md  app.py  client_app.py  gsm8k_app.py  hotpotqa_app.py  notebook_app.py  requirements.txt
resources_servers/base_gymnasium/: README.md  __init__.py  base.py
resources_servers/bash_sandbox/: README.md  app.py  judge.py  preconvert_to_pdf.py  requirements.txt
resources_servers/blackjack/: README.md  app.py
resources_servers/browsecomp_advanced_harness/: README.md  app.py  judge_prompt.py
resources_servers/browser_gym/: README.md  app.py  browser_pool.py  prepare_data.py  requirements.txt  schemas.py  setup_playwright.py
resources_servers/calendar/: README.md  app.py  client.py  create_synth_conversations.py  dataset_preprocess.py  generate_rollouts.py  prompts.py  requirements.txt  utils.py
resources_servers/circle_click/: README.md  app.py  generate_data.py  view_rollouts.py
resources_servers/circle_count/: README.md  app.py  generate_data.py  view_rollouts.py
resources_servers/code_gen/: README.md  app.py  livecodebench_accuracy_test.py  metrics.py
resources_servers/vlm_eval_kit/: README.md  pyproject.toml
responses_api_models/vllm_model/: app.py  client.py  pyproject.toml
responses_api_models/vllm_model/configs/: vllm_model.yaml  vllm_model_for_training.yaml
responses_api_models/vllm_model/tests/: round_trip_test_data.json  test_app.py
scripts/: print_aggregate_results.py  update_resource_servers.py  validate_config_fields.py
tests/: conftest.py
tutorials/: 01-concepts.md
(+1010 files in other folders)
